Included more content in the report

--- a/report/preambule.tex
+++ b/report/preambule.tex
@@ -87,21 +87,21 @@
 
 
 % Define theorem-like environments
-\newtheorem{theorem}{Theorem}[section]
+\newtheorem{theor}{Theorem}[section]
 \newtheorem{lemma}{Lemma}[section]
 \newtheorem{definition}{Definition}[section]
 \newtheorem{notation}{Notation}[section]
 \newtheorem{remark}{Remark}[section]
 
 % Custom commands for convenience
-\newcommand{\thm}[1]{\begin{theorem}#1\end{theorem}}
+\newcommand{\thm}[1]{\begin{theor}#1\end{theor}}
 \newcommand{\lem}[1]{\begin{lemma}#1\end{lemma}}
 \newcommand{\defn}[1]{\begin{definition}#1\end{definition}}
 \newcommand{\nota}[1]{\begin{notation}#1\end{notation}}
 \newcommand{\rem}[1]{\begin{remark}#1\end{remark}}
 
 % Use cleverref for enhanced referencing
-\crefname{theorem}{theorem}{theorems}
+\crefname{theor}{theorem}{theorems}
 \crefname{lemma}{lemma}{lemmas}
 \crefname{definition}{definition}{definitions}
 \crefname{remark}{remark}{remarks}
